Upload contact and resume pages

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     </tr>
   </table>
   <hr>
+  <div class="menu">
+    <a href="#">Home</a>
+    <a href="resume.html">Resume</a>
+    <a href="contact.html">Contact</a>
+  </div>
   <h3>Education</h3>
   <ul>
     <li>B.S. Business Administration, Finance - CSU, Chico</li>
@@ -48,6 +53,7 @@
       </tr>
     </tbody>
   </table>
+  <p><a href="resume.html">Full Resume</a></p>
   <hr>
   <h3>Skills</h3>
   <table>
