--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Matthew Martin's CV</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -19,7 +20,7 @@
   </table>
   <hr>
   <div class="menu">
-    <a href="#">Home</a>
+    <a href="index.html">Home</a>
     <a href="resume.html">Resume</a>
     <a href="contact.html">Contact</a>
   </div>
