--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Matt Martin Resume</title>
+  <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
